Text fix and bottom whitespace

--- a/style.css
+++ b/style.css
@@ -74,3 +74,7 @@ h1,h2,h3,h4,h5,h6 {
 .header h1 {
   color: rgb(189, 0, 239);
 }
+
+.contacto {
+height: 85px;
+}
